Release history for Dist-Zilla-Plugin-Munge-Whitespace

{{$NEXT}}
 - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: +5 ↑2 -1 (suggests: ↑2)
 - test: ↓1

0.001000 2015-04-05T22:26:51Z 866b138
 - First version.