@@ -3,3 +3,6 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 0.001001
  [Changed / test requires]
  - Test::More 0.89 → 0
+
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
