@@ -21,3 +21,6 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
 
  [Removed / develop requires]
  - Dist::Zilla::Plugin::MetaYAML
+
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
